force-app/main/default/objects/DaScoopComposer__Scoop_Composer_Settings__c/DaScoopComposer__Scoop_Composer_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>All Settings related to Groove Connect (managed package)</description>
    <label>Groove Settings</label>
</CustomObject>