force-app/main/default/objects/DaScoopComposer__Scoop_Composer_Settings__c/fields/DaScoopComposer__Account_Notes_custom_field_name__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Account_Notes_custom_field_name__c</fullName>
    <description>API name of the field on the Account object Groove will use to store notes related to the Account. If valid, this field will be used to populate Groove notes.</description>
    <inlineHelpText>API name of the field on the Account object Groove will use to store notes related to the Account.</inlineHelpText>
    <label>Account Notes Custom Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>