force-app/main/default/objects/DaScoopComposer__Scoop_Composer_Settings__c/fields/DaScoopComposer__Add_only_Groove_Users_as_Invitees__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Add_only_Groove_Users_as_Invitees__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When Groove syncs events from Google to Salesforce, it will try to find users, contacts and leads and add them as invitees. This option controls whether Groove will either add only Salesforce users that have a Groove license or any users.</description>
    <inlineHelpText>When Groove syncs events from Google to Salesforce, it tries to find users, contacts and leads with the respective email to add them as invitees. This option controls whether Groove will either include only users that have a Groove license or any users.</inlineHelpText>
    <label>Add only Groove Users as Invitees</label>
    <type>Checkbox</type>
</CustomField>