force-app/main/default/objects/DaScoopComposer__Scoop_Composer_Settings__c/fields/DaScoopComposer__Additional_Fields_for_Email_Logging__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Additional_Fields_for_Email_Logging__c</fullName>
    <description>Defines a list of Task fields (API names) that are to be displayed in the &quot;Log Email&quot; dialog.</description>
    <inlineHelpText>Defines a list of Task fields (API names) that are to be displayed in the &apos;Log Email&apos; dialog so users can add additional information to the Activity records when they log emails using Search &amp; Select.</inlineHelpText>
    <label>Additional Fields for Email Logging</label>
    <type>TextArea</type>
</CustomField>