force-app/main/default/objects/DaScoopComposer__Scoop_Composer_Settings__c/fields/DaScoopComposer__Allow_Automatic_Calendar_Sync__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Allow_Automatic_Calendar_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Controls whether users can activate Groove&apos;s calendar sync service. Groove calendar Sync will bidirectionally sync Google calendar events with Salesforce events</inlineHelpText>
    <label>Allow Background Calendar Sync</label>
    <type>Checkbox</type>
</CustomField>