force-app/main/default/objects/DaScoopComposer__Scoop_Composer_Settings__c/fields/DaScoopComposer__Allow_Automatic_Email_Sync__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Allow_Automatic_Email_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls whether users can set up Groove&apos;s email sync service. Groove Email Sync will automatically log all customer related emails sent and received by your users.</description>
    <inlineHelpText>Controls whether users can actviate Groove&apos;s email sync service. Groove Email Sync will automatically log all customer related emails sent and received by your users.</inlineHelpText>
    <label>Allow Background Email Sync</label>
    <type>Checkbox</type>
</CustomField>