force-app/main/default/objects/DaScoopComposer__Scoop_Composer_Settings__c/fields/DaScoopComposer__Allow_Inline_Create__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Allow_Inline_Create__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Controls whether users can create Salesforce records from the sidebar in Groove for Gmail. Otherwise new records will be created in a new Salesforce tab.</inlineHelpText>
    <label>Allow Inline Create</label>
    <type>Checkbox</type>
</CustomField>