force-app/main/default/objects/DaScoopComposer__Scoop_Composer_Settings__c/fields/DaScoopComposer__Allow_Inline_Editing__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Allow_Inline_Editing__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>[DEPRECATED] Controls whether users can update Salesforce records from the side bar in Groove for Gmail</inlineHelpText>
    <label>[DEPRECATED]Allow Inline Editing</label>
    <type>Checkbox</type>
</CustomField>