force-app/main/default/objects/DaScoopComposer__Scoop_Composer_Settings__c/fields/DaScoopComposer__Always_Mirror_Events_in_Google_Calendar__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Always_Mirror_Events_in_Google_Calendar__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>controls whether or not this event will be mirrored in the corporate calendar of the user who is the owner of an event record.</inlineHelpText>
    <label>Always Mirror Events in Google Calendar</label>
    <type>Checkbox</type>
</CustomField>