force-app/main/default/objects/DaScoopComposer__Scoop_Composer_Settings__c/fields/DaScoopComposer__Block_Teammate_Email_Opens__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Block_Teammate_Email_Opens__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Do not register email opens from teammates with Groove installed. This is a good way to omit internal company co-worker email opens from affecting stats.</description>
    <inlineHelpText>Do not register email opens from teammates with Groove installed. This is a good way to omit internal company co-worker email opens from affecting stats.</inlineHelpText>
    <label>Block Teammate Email Opens</label>
    <type>Checkbox</type>
</CustomField>