force-app/main/default/objects/DaScoopComposer__Scoop_Composer_Settings__c/fields/DaScoopComposer__Calendar_Email__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Calendar_Email__c</fullName>
    <inlineHelpText>Allows you to auto-configure the user&apos;s Chrome extension with a custom Groove Login URL. This is useful if you have a SSO system in place.</inlineHelpText>
    <label>Custom Groove Login URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>