force-app/main/default/objects/DaScoopComposer__Scoop_Composer_Settings__c/fields/DaScoopComposer__Create_Unresolved_Items__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Create_Unresolved_Items__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Controls what happens if an email is logged but no related objects was found (e.g. Lead, Contact, Opportunity, Case, etc). If checked, Groove will create an &quot;orphaned task&quot; and the user can later relate the task manually to a record or delete it.</inlineHelpText>
    <label>Create Unresolved Items</label>
    <type>Checkbox</type>
</CustomField>