force-app/main/default/objects/DaScoopComposer__Scoop_Composer_Settings__c/fields/DaScoopComposer__Domain_Blacklist__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Domain_Blacklist__c</fullName>
    <description>Is a comma separated list of email domains. Groove will not log emails if all participants on the email are on the blocklist. Use this to prevent purely internal emails from being logged.</description>
    <inlineHelpText>Is a comma separated list of email domains. Groove will not log emails if all participants on the email are on the blocklist. Use this to prevent purely internal emails from being logged.</inlineHelpText>
    <label>Domain Blocklist</label>
    <type>TextArea</type>
</CustomField>