force-app/main/default/objects/DaScoopComposer__Scoop_Composer_Settings__c/fields/DaScoopComposer__Domain_Blacklist_Applies_to_Tracking__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Domain_Blacklist_Applies_to_Tracking__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Emails containing only recipients on the domain blocklist will not be tracked. This can be a good way to prevent internal emails from ever being tracked.</description>
    <inlineHelpText>Emails containing only recipients on the domain blocklist will not be tracked. This can be a good way to prevent internal emails from ever being tracked.</inlineHelpText>
    <label>Blocklist Applies to Email Open Tracking</label>
    <type>Checkbox</type>
</CustomField>