force-app/main/default/objects/DaScoopComposer__Scoop_Composer_Settings__c/fields/DaScoopComposer__Dont_Track_RSVP_Status__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Dont_Track_RSVP_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Controls whether you want Groove to indicate the RSVP status of invitees. This is also useful when you don&apos;t want Groove to do the equivalent of clicking &quot;Add to Invitees&quot; when you select contacts/leads, making it a &quot;Multi-Person Event&quot;</inlineHelpText>
    <label>Don&apos;t Track RSVP Status</label>
    <type>Checkbox</type>
</CustomField>