force-app/main/default/objects/DaScoopComposer__Scoop_Composer_Settings__c/fields/DaScoopComposer__Email_to_Saleforce_Association_Policy__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Email_to_Saleforce_Association_Policy__c</fullName>
    <inlineHelpText>Auto-associating emails to Leads/Contacts and...
0 = None
11 = My Open Opportunities
12 = My Opportunities
13 = Any Open Opportunities
14 = Any Opportunities
21 = My Open Cases
22 = My Cases
23 = Any Open Cases
24 = Any Cases</inlineHelpText>
    <label>Related-to Lookup Logic</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>