force-app/main/default/objects/DaScoopComposer__Scoop_Composer_Settings__c/fields/DaScoopComposer__Email_to_Username_Suffix__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Email_to_Username_Suffix__c</fullName>
    <inlineHelpText>if your usernames are named like Email + Suffix (e.g. frank@acme.com.production) you can add the suffix here (including the dot). This allows the Groove Auth Provider Handler to map an email address to a username.</inlineHelpText>
    <label>Email to Username Suffix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>