force-app/main/default/objects/DaScoopComposer__Scoop_Composer_Settings__c/fields/DaScoopComposer__Enable_Advanced_Email_Tracking__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Enable_Advanced_Email_Tracking__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If you have Email Tracking Enabled, this indicates whether or not the IP Address and User Agent String of a recipient opening a tracked email will be saved. Disable this option if tracking such attributes isn&apos;t compliant with your privacy policy.</inlineHelpText>
    <label>Enable Advanced Email Open Tracking</label>
    <type>Checkbox</type>
</CustomField>