force-app/main/default/objects/DaScoopComposer__Scoop_Composer_Settings__c/fields/DaScoopComposer__Enable_Calendar__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Enable_Calendar__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Control whether users can log calendar events from Google calendar user interface relate the event to specific Salesforce records and populate additional fields on the Event object.</inlineHelpText>
    <label>Enable Calendar Logging</label>
    <type>Checkbox</type>
</CustomField>