force-app/main/default/objects/DaScoopComposer__Scoop_Composer_Settings__c/fields/DaScoopComposer__Enable_Contact_Auto_Capture__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Enable_Contact_Auto_Capture__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Auto Contact Capture</description>
    <inlineHelpText>Enable Contact Auto Capture for users to automatically uncover and capture Contacts that do not exist in Salesforce, from Accounts you are already talking to</inlineHelpText>
    <label>Auto Contact Capture</label>
    <type>Checkbox</type>
</CustomField>