force-app/main/default/objects/DaScoopComposer__Scoop_Composer_Settings__c/fields/DaScoopComposer__Enable_Easy_Create_Lead__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Enable_Easy_Create_Lead__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether users have the option to create leads from the Groove View within Gmail</description>
    <inlineHelpText>Indicates whether users have the option to create leads from the Groove View within Gmail</inlineHelpText>
    <label>Enable Easy Create Lead</label>
    <type>Checkbox</type>
</CustomField>