force-app/main/default/objects/DaScoopComposer__Scoop_Composer_Settings__c/fields/DaScoopComposer__Enable_Email_Bonus_Features__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Enable_Email_Bonus_Features__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Indicates whether users can activate the features &quot;Send Later&quot;, &quot;Email Reminders&quot;.</inlineHelpText>
    <label>Enable Email Bonus Features</label>
    <type>Checkbox</type>
</CustomField>