force-app/main/default/objects/DaScoopComposer__Scoop_Composer_Settings__c/fields/DaScoopComposer__Enable_Email_Tracking__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Enable_Email_Tracking__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>indicates whether the option &quot;Track Email&quot; is displayed to your users in Gmail. This allows you to enable/disable the email tracking feature.</inlineHelpText>
    <label>Enable Email Open Tracking</label>
    <type>Checkbox</type>
</CustomField>