force-app/main/default/objects/DaScoopComposer__Scoop_Composer_Settings__c/fields/DaScoopComposer__Enable_Groove_History__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Enable_Groove_History__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Groove History enables users to view their notes, call logs, and logged events for any Salesforce record right from Gmail. Groove History also makes it dead simple to log new activities and calls directly from Gmail.</description>
    <inlineHelpText>Groove History enables users to view their notes, call logs, and logged events for any Salesforce record right from Gmail. Groove History also makes it dead simple to log new activities and calls directly from Gmail.</inlineHelpText>
    <label>Enable Groove History</label>
    <type>Checkbox</type>
</CustomField>