force-app/main/default/objects/DaScoopComposer__Scoop_Composer_Settings__c/fields/DaScoopComposer__Enable_LinkedIn_Sales_Navigator__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Enable_LinkedIn_Sales_Navigator__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Controls whether you want users to see the LinkedIn tab to be in the Groove sidebar. This tab requires users to have a LinkedIn Sales Navigator license to be useful.</inlineHelpText>
    <label>Enable LinkedIn Sales Navigator</label>
    <type>Checkbox</type>
</CustomField>