force-app/main/default/objects/DaScoopComposer__Scoop_Composer_Settings__c/fields/DaScoopComposer__Enable_Search_Salesforce_from_Gmail__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Enable_Search_Salesforce_from_Gmail__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>indicates whether users are able to search Salesforce contacts or leads from Gmail via Groove while composing emails.</inlineHelpText>
    <label>Enable Search Salesforce from Gmail</label>
    <type>Checkbox</type>
</CustomField>