force-app/main/default/objects/DaScoopComposer__Scoop_Composer_Settings__c/fields/DaScoopComposer__Exact_Match_Ownership__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Exact_Match_Ownership__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do not log emails if the recipients do not contain the email address of a user.</description>
    <inlineHelpText>Check this box if you do not want to log emails that cannot be associated to a Salesforce user by inspecting the email recipients, like emails sent from a group email address. If this box is not checked, Groove will associate the email to the running user</inlineHelpText>
    <label>Exact Match Ownership</label>
    <type>Checkbox</type>
</CustomField>