force-app/main/default/objects/DaScoopComposer__Scoop_Composer_Settings__c/fields/DaScoopComposer__Ignored_Attachment_Types__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Ignored_Attachment_Types__c</fullName>
    <description>A comma-separated list of file extensions to ignore when logging an email, e.g., jpg, png, gif</description>
    <inlineHelpText>A comma-separated list of file extensions to ignore when logging an email, e.g., jpg, png, gif</inlineHelpText>
    <label>Ignored Attachment Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>