force-app/main/default/objects/DaScoopComposer__Scoop_Composer_Settings__c/fields/DaScoopComposer__Maximum_Attachment_Size__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Maximum_Attachment_Size__c</fullName>
    <description>Maximum size (in bytes) of email attachments to attach to Activity/Activity&apos;s parent.
Blank (default) = Allow any attachments (5mb max size)
0 = Do not allow any attachments
1000000 = Allow attachments up to 1mb</description>
    <inlineHelpText>Maximum size (in bytes) of email attachments to attach to Activity/Activity&apos;s parent.
Blank (default) = Allow any attachments (5mb max size)
0 = Do not allow any attachments
1000000 = Allow attachments up to 1mb</inlineHelpText>
    <label>Maximum Attachment Size</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>