force-app/main/default/objects/DaScoopComposer__Scoop_Composer_Settings__c/fields/DaScoopComposer__Only_sync_CRM_related_Google_events__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Only_sync_CRM_related_Google_events__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Controls whether Google events are only synced to Salesforce when at least one invitee is a user, a contact or a lead (= the event is considered CRM related). If this box is unchecked, all events (that are not private) are synced from Google to Salesforce</inlineHelpText>
    <label>Only sync CRM related Google events</label>
    <type>Checkbox</type>
</CustomField>