force-app/main/default/objects/DaScoopComposer__Scoop_Composer_Settings__c/fields/DaScoopComposer__Opportunity_Notes_custom_field_name__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Opportunity_Notes_custom_field_name__c</fullName>
    <description>API name of the field on the Opportunity object Groove will use to store notes related to the Opportunity. If valid, this field will be used to populate Groove notes.</description>
    <inlineHelpText>API name of the field on the Opportunity object Groove will use to store notes related to the Opportunity.</inlineHelpText>
    <label>Opportunity Notes Custom Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>