force-app/main/default/objects/DaScoopComposer__Scoop_Composer_Settings__c/fields/DaScoopComposer__Reparent_Email_Attachments__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Reparent_Email_Attachments__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Controls whether you want email attachments to be saved under the &quot;Related to&quot; record or the &quot;Person&quot; record instead of the Email record directly.</inlineHelpText>
    <label>Reparent Email Attachments</label>
    <type>Checkbox</type>
</CustomField>