force-app/main/default/objects/DaScoopComposer__Scoop_Composer_Settings__c/fields/DaScoopComposer__Respect_Sharing_Rules_When_Logging__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Respect_Sharing_Rules_When_Logging__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Respect sharing rules when logging emails / calendar events.</description>
    <inlineHelpText>Controls whether Groove logs emails/events to any related records, regardless of sharing rules (unchecked) or logs emails/events only to records to which the user has read access to (checked).</inlineHelpText>
    <label>Respect Sharing Rules when Logging</label>
    <type>Checkbox</type>
</CustomField>