force-app/main/default/objects/DaScoopComposer__Scoop_Composer_Settings__c/fields/DaScoopComposer__Reverse_Number_Lookup__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Reverse_Number_Lookup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When enabled, Groove will automatically update the normalized version of Contacts and Leads Phone and Mobile numbers to support Groove Dialer&apos;s reverse number lookup.</description>
    <inlineHelpText>Enable if you want to use Groove Dialer&apos;s reverse number lookup functionality</inlineHelpText>
    <label>Reverse Number Lookup</label>
    <type>Checkbox</type>
</CustomField>