force-app/main/default/objects/DaScoopComposer__Scoop_Composer_Settings__c/fields/DaScoopComposer__Search_and_Select_Objects__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Search_and_Select_Objects__c</fullName>
    <inlineHelpText>is a comma separated list of all sObjects (use API names of sObjects that &quot;Allow Activities&quot;) that shall be included in a search and select result (e.g. when a user want&apos;s to attach an email or calendar event to a specific record in Salesforce).</inlineHelpText>
    <label>Search and Select Objects</label>
    <type>TextArea</type>
</CustomField>