force-app/main/default/objects/DaScoopComposer__Scoop_Composer_Settings__c/fields/DaScoopComposer__Skip_Automatic_Permission_Set_Assignment__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Skip_Automatic_Permission_Set_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do not automatically assign the Groove Permission Set to all active users when they are created or updated.</description>
    <inlineHelpText>(Recommendation: disabled). When enabled, the Groove Assign Permission Set trigger will immediately exit and will not assign the Groove Permission set to newly inserted or updated users.</inlineHelpText>
    <label>Skip Automatic Permission Set Assignment</label>
    <type>Checkbox</type>
</CustomField>