force-app/main/default/objects/DaScoopComposer__Scoop_Composer_Settings__c/fields/DaScoopComposer__Tracking_Url__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Tracking_Url__c</fullName>
    <inlineHelpText>If you are running Groove in isolated mode, this field contains the base URL of the tracking pixel.</inlineHelpText>
    <label>Custom Email Open Tracking URL</label>
    <type>Url</type>
</CustomField>