force-app/main/default/objects/DaScoopComposer__Scoop_Composer_Settings__c/fields/DaScoopComposer__Use_Groove_Templates_Only__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Use_Groove_Templates_Only__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Groove allows users to manage email templates from Gmail. If this box is checked, this feature is limited to Groove templates. Otherwise users can manage Groove templates and Salesforce templates.</inlineHelpText>
    <label>Use Groove Templates Only</label>
    <type>Checkbox</type>
</CustomField>