force-app/main/default/objects/DaScoopComposer__Scoop_Composer_Settings__c/fields/DaScoopComposer__Use_Inline_Groove_Views_Legacy__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Use_Inline_Groove_Views_Legacy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether users have the option to create opportunities from the Groove View within Gmail</description>
    <inlineHelpText>Indicates whether users have the option to create opportunities from the Groove View within Gmail</inlineHelpText>
    <label>Enable Easy Create Opportunity</label>
    <type>Checkbox</type>
</CustomField>